--- a/docsite/components/rating.html
+++ b/docsite/components/rating.html
@@ -81,7 +81,7 @@
     
     <footer class="centered vertical-direction bg-secondary">
         <button class="prev-page-btn btn-transparent btn rm-border font2 float"><a class="decor-none text-primary" href="navigation.html"><i class="fa fa-arrow-left "></i> Navigation </a></button>
-        <button class="next-page-btn btn-transparent btn rm-border font2 float"><a class="decor-none text-primary" href="rating.html">Rating <i class="fa fa-arrow-right "></i> </a></button>
+        <button class="next-page-btn btn-transparent btn rm-border font2 float"><a class="decor-none text-primary" href="toast.html">Toast <i class="fa fa-arrow-right "></i> </a></button>
        
 
         <h2 class=" mb-lg ">Build with <span class="text-primary">&lt;/&gt;</span> by Kajal Kumari</h2>
